--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
 spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 #---------------------------------------------------------#
 #                                                         #
 # Session                                                 #
@@ -37,12 +36,12 @@ spring.http.multipart.max-request-size=100MB
 # Local Postgresql                                        #
 #                                                         #
 #---------------------------------------------------------#
-#spring.jpa.database=POSTGRESQL
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:5432/mosanda-center
-#spring.datasource.username=postgres
-#spring.datasource.password=root
+spring.jpa.database=POSTGRESQL
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/mosanda-center
+spring.datasource.username=postgres
+spring.datasource.password=root
 #---------------------------------------------------------#
 #                                                         #
 # Compression                                             #
