--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,12 +36,12 @@ spring.http.multipart.max-request-size=100MB
 # Local Postgresql                                        #
 #                                                         #
 #---------------------------------------------------------#
-spring.jpa.database=POSTGRESQL
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/mosanda-center
-spring.datasource.username=postgres
-spring.datasource.password=root
+#spring.jpa.database=POSTGRESQL
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/mosanda-center
+#spring.datasource.username=postgres
+#spring.datasource.password=root
 #---------------------------------------------------------#
 #                                                         #
 # Compression                                             #
